<resources>
    <string name="app_name">Reef Angel Status</string>
    <string name="app_version">0.9.6 - Beta 5</string>
    <string name="menuMainRefresh">Refresh</string>
    <string name="menuMainSettings">Settings</string>
    <string name="menuMainAbout">About</string>
    <string name="menuMainCommands">Commands</string>
    <string name="menuMainMemory">Memory</string>
    <string name="menuMainHistory">History</string>
    <string name="menuMainErrors">Errors</string>
    <string name="menuMainNotifications">Notifications</string>
    <string name="menuDelete">Delete</string>
    <string name="titleHistory">Parameters History</string>
    <string name="titleMemory">Internal Memory</string>
    <string name="titleCommands">Commands</string>
    <string name="titleAbout">About Reef Angel Status</string>
    <string name="titleLicense">License Information</string>
    <string name="titleMemoryTabs">Memory Pages</string>
    <string name="titleCommandTabs">Command Pages</string>
    <string name="titlePrefs">Status Settings</string>
    <string name="titleDateTime">Date / Time</string>
    <string name="titleSelectProfile">Select Profile</string>
    <string name="titleChangelog">Changelog</string>
    <string name="titleErrorlog">Error Log File</string>
    <string name="titleVortech">Vortech Config</string>
    <string name="titleError">Errors History</string>
    <string name="titleNotifications">Notifications</string>
    <string name="titleCreateNotification">Create Notification</string>
    <string name="titleUpdateNotification">Update Notification</string>
    <string name="titleOverride">PWM Override</string>
    <string name="titleFlags">Flags</string>
    <string name="titleAlert">Alert Flags</string>
    <string name="titleStatus">Status Flags</string>
    <string name="tabMemory1">memory_tab_1</string>
    <string name="tabMemory2">memory_tab_2</string>
    <string name="tabCommand1">command_tab_1</string>
    <string name="tabCommand2">command_tab_2</string>
    <string name="textAbout">Monitors the status of your Reef Angel Controller and displays the values.  You must have a wifi attachment installed on
your controller or have a ReefAngel UserID to use this app.</string>
    <string name="textLicense">Reef Angel Status by Curt Binder is licensed under a 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</string>
    <string name="descriptionMemory">Select the memory location to update or enter a custom location.</string>
    <string name="descriptionModes">Feeding and Water Change buttons enter the appropriate modes. Press the Exit button to simulate a button press on the controller, which exits the modes.</string>
    <string name="descriptionFirstRun">Before you begin, you must configure a few settings in order for the application to run properly.\n
* Device: Select Portal or Controller\n
* Hostname: Enter the hostname or IP address of your controller.\n
* Port: Enter the port for the controller (leave blank if unknown or the default).\n
* User ID: Enter your username for the forum. This is to download your labels and/or data from the portal.</string>
    <string name="descriptionCurrentControllerTime">Press \'Get Time\' to retrieve the current date and time from the controller.  Press \'Set Current Time\' to set the date and time to match your device.</string>
    <string name="descriptionCustomControllerTime">You can enter a custom date and time. Use \'Change Time\' or \'Change Date\' to enter the custom date and time. Use \'Set Custom Time\' to set it.</string>
    <string name="descriptionMode">Change the Vortech Mode</string>
    <string name="descriptionSpeed">Change the Vortech Speed</string>
    <string name="descriptionDuration">Change the Vortech Duration</string>
    <string name="errorAuthentication">Device Authentication Error, check your user/password settings.</string>
    <string name="errorConnection">Error connecting to device</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="buttonOk">OK</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonVersion">Get RA Version</string>
    <string name="buttonDateGet">Get Time</string>
    <string name="buttonDateSet">Set Current Time</string>
    <string name="buttonRead">Read Value</string>
    <string name="buttonWrite">Write Value</string>
    <string name="buttonFeeding">Feeding Mode</string>
    <string name="buttonWater">Water Change</string>
    <string name="buttonExit">Exit Mode</string>
    <string name="buttonAtoClear">Clear ATO</string>
    <string name="buttonOverheatClear">Clear Overheat</string>
    <string name="buttonGetControllerTime">Get Time</string>
    <string name="buttonSetCurrentTime">Set Current Time</string>
    <string name="buttonChangeDate">Change Date</string>
    <string name="buttonChangeTime">Change Time</string>
    <string name="buttonSetCustomTime">Set Custom Time</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonFinish">Finish</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonSave">Save</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonSet">Set</string>
    <string name="radioByte">Byte</string>
    <string name="radioInt">Int</string>
    <string name="labelLastUpdated">Last Updated:</string>
    <string name="labelStatus">Status</string>
    <string name="labelController">Controller</string>
    <string name="labelTemp1">T1</string>
    <string name="labelTemp2">T2</string>
    <string name="labelTemp3">T3</string>
    <string name="labelPH">PH</string>
    <string name="labelDP">DP</string>
    <string name="labelAP">AP</string>
    <string name="labelSalinity">Salinity</string>
    <string name="labelORP">ORP</string>
    <string name="labelPHExp">PH Exp</string>
    <string name="labelWaterLevel">Water</string>
    <string name="labelHumidity">Humidity</string>
    <string name="labelAtoLow">ATO Low</string>
    <string name="labelAtoHigh">ATO High</string>
    <string name="labelPort1">Port 1</string>
    <string name="labelPort2">Port 2</string>
    <string name="labelPort3">Port 3</string>
    <string name="labelPort4">Port 4</string>
    <string name="labelPort5">Port 5</string>
    <string name="labelPort6">Port 6</string>
    <string name="labelPort7">Port 7</string>
    <string name="labelPort8">Port 8</string>
    <string name="labelRelayBox">Relay Box</string>
    <string name="labelSeparator">:</string>
    <string name="labelFeedingMode">Feeding Mode</string>
    <string name="labelWaterMode">Water Change Mode</string>
    <string name="labelExitMode">Exit Mode</string>
    <string name="labelAtoClear">ATO Clear</string>
    <string name="labelOverheatClear">Overheat Clear</string>
    <string name="labelVersion">Installed Version:</string>
    <string name="labelLocation">Location:</string>
    <string name="labelValue">Value:</string>
    <string name="labelType">Type:</string>
    <string name="labelDateController">Controller:</string>
    <string name="labelDateTime">Time:</string>
    <string name="labelDate">Date:</string>
    <string name="labelDimming">Dimming</string>
    <string name="labelRadion">Radion</string>
    <string name="labelWhite">White</string>
    <string name="labelRoyalBlue">Royal Blue</string>
    <string name="labelRed">Red</string>
    <string name="labelGreen">Green</string>
    <string name="labelBlue">Blue</string>
    <string name="labelIntensity">Intensity</string>
    <string name="labelVortech">Vortech</string>
    <string name="labelMode">Mode</string>
    <string name="labelSpeed">Speed</string>
    <string name="labelDuration">Duration</string>
    <string name="labelAI">Aqua Illuminations</string>
    <string name="labelIO">I/O</string>
    <string name="labelON">ON</string>
    <string name="labelOFF">OFF</string>
    <string name="labelCustomVariables">Custom Variables</string>
    <string name="labelCustom">Custom</string>
    <string name="labelEnable">Enable</string>
    <string name="labelChannel">Channel</string>
    <string name="labelLightsOn">Lights On</string>
    <string name="labelLightsOff">Lights Off</string>
    <string name="labelReboot">Reboot</string>
    <string name="labelCalibratePH">Calibrate PH</string>
    <string name="labelCalibrateSalinity">Calibrate Salinity</string>
    <string name="labelCalibrateORP">Calibrate ORP</string>
    <string name="labelCalibratePHExp">Calibrate PH Exp</string>
    <string name="labelCalibrateWaterLevel">Calibrate Water Level</string>
    <string name="labelPwmOverride">PWM Override</string>
    <string name="labelParameter">Parameter:</string>
    <string name="labelCondition">Condition:</string>
    <string name="labelAtoTimeout">ATO Timeout</string>
    <string name="labelOverheatTimeout">Overheat Timeout</string>
    <string name="labelBusLock">Bus Lock</string>
    <string name="labelLeak">Leak</string>
    <string name="websiteReefangel">http://www.reefangel.com/</string>
    <string name="forumReefangel">http://forum.reefangel.com/</string>
    <string name="prefsCategoryApp">Application</string>
    <string name="prefDeviceTitle">Device</string>
    <string name="prefDeviceDefault">0</string>
    <string name="prefHostTitle">Home Host</string>
    <string name="prefPortTitle">Home Port</string>
    <string name="prefPortDefault">2000</string>
    <string name="prefUserIdTitle">User ID</string>
    <string name="prefUserIdDefault">reefangel</string>
    <string name="prefWifiUserTitle">Device Authentication Username</string>
    <string name="prefWifiUserSummary">Username for basic authentication on the controller (libraries v1.1.1 and later)</string>
    <string name="prefWifiPasswordTitle">Device Authentication Password</string>
    <string name="prefWifiPasswordSummary">Password for basic authentication on the controller (libraries v1.1.1 and later)</string>
    <string name="prefAppTitle">Info</string>
    <string name="prefVersionTitle">Version</string>
    <string name="prefAuthorTitle">Author</string>
    <string name="prefAuthorSummary">Curt Binder</string>
    <string name="prefContributorTitle">Contributors</string>
    <string name="prefContributorSummary">Roberto Imai, Mathieu Brisson, Tin Pavlinic</string>
    <string name="prefCopyrightTitle">Copyright</string>
    <string name="prefCopyrightSummary">Copyright 2011–13 Curt Binder</string>
    <string name="prefLicenseTitle">License</string>
    <string name="prefLicenseSummary">This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.</string>
    <string name="prefChangelogSummary">Displays changelog</string>
    <string name="prefReefAngelTitle">Reef Angel Controller</string>
    <string name="prefReefAngelSummary">http://www.reefangel.com/</string>
    <string name="prefForumTitle">Reef Angel Forums</string>
    <string name="prefForumSummary">http://forum.reefangel.com/</string>
    <string name="prefLoggingCategory">Logging</string>
    <string name="prefLoggingUpdateTitle">File Updating</string>
    <string name="prefLoggingDeleteTitle">Delete log file</string>
    <string name="prefLoggingSendTitle">Send log file</string>
    <string name="prefLoggingSendSummary">Emails log file to developer</string>
    <string name="prefDeviceKey">device</string>
    <string name="prefWifiUserKey">wifi_username</string>
    <string name="prefWifiPasswordKey">wifi_password</string>
    <string name="prefChangelogKey">changelog</string>
    <string name="prefLoggingEnableKey">logging</string>
    <string name="prefLoggingUpdateKey">logging_update</string>
    <string name="prefLoggingDeleteKey">logging_delete_file</string>
    <string name="prefLoggingSendKey">logging_send</string>
</resources>