<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsCategoryApp" >
        <PreferenceScreen
            android:key="appinfo"
            android:title="@string/prefAppTitle" >
            <PreferenceScreen
                android:key="version"
                android:selectable="false"
                android:summary="@string/app_version"
                android:title="@string/prefVersionTitle" />
            <PreferenceScreen
                android:key="author"
                android:selectable="false"
                android:summary="@string/prefAuthorSummary"
                android:title="@string/prefAuthorTitle" />
            <PreferenceScreen
                android:key="contributor"
                android:selectable="false"
                android:summary="@string/prefContributorSummary"
                android:title="@string/prefContributorTitle" />
            <PreferenceScreen
                android:key="copyright"
                android:selectable="false"
                android:summary="@string/prefCopyrightSummary"
                android:title="@string/prefCopyrightTitle" />

            <Preference
                android:summary="@string/prefLicenseSummary"
                android:title="@string/prefLicenseTitle" >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:targetClass="info.curtbinder.reefangel.phone.LicenseActivity"
                    android:targetPackage="info.curtbinder.reefangel.phone" />
            </Preference>

            <PreferenceScreen
                android:key="@string/prefChangelogKey"
                android:summary="@string/prefChangelogSummary"
                android:title="@string/titleChangelog" />

            <Preference
                android:summary="@string/prefReefAngelSummary"
                android:title="@string/prefReefAngelTitle" >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/websiteReefangel" />
            </Preference>
            <Preference
                android:summary="@string/prefForumSummary"
                android:title="@string/prefForumTitle" >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/forumReefangel" />
            </Preference>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>