<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/prefDeviceDefault"
        android:entries="@array/devices"
        android:entryValues="@array/devicesValues"
        android:key="@string/prefDeviceKey"
        android:title="@string/prefDeviceTitle" />

    <EditTextPreference
        android:key="@string/prefWifiUserKey"
        android:summary="@string/prefWifiUserSummary"
        android:title="@string/prefWifiUserTitle" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/prefWifiPasswordKey"
        android:summary="@string/prefWifiPasswordSummary"
        android:title="@string/prefWifiPasswordTitle" />

</PreferenceScreen>