<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefLoggingCategory" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefLoggingEnableKey"
            android:title="@string/labelEnable" />

        <ListPreference
            android:defaultValue="0"
            android:dependency="@string/prefLoggingEnableKey"
            android:entries="@array/loggingUpdate"
            android:entryValues="@array/loggingUpdateValues"
            android:key="@string/prefLoggingUpdateKey"
            android:title="@string/prefLoggingUpdateTitle" />

        <Preference
            android:key="@string/prefLoggingSendKey"
            android:summary="@string/prefLoggingSendSummary"
            android:title="@string/prefLoggingSendTitle" />
        <Preference
            android:key="@string/prefLoggingDeleteKey"
            android:title="@string/prefLoggingDeleteTitle" />
    </PreferenceCategory>

</PreferenceScreen>