<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-13 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <Button
                android:id="@+id/command_button_feed"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_restaurant"
                android:text="@string/buttonFeeding" />

            <Button
                android:id="@+id/command_button_water"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_mist"
                android:text="@string/buttonWater" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_exit"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_exit"
                android:text="@string/buttonExit" />

            <Button
                android:id="@+id/command_button_reboot"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_io"
                android:text="@string/labelReboot" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_lights_on"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_bulb_yellow"
                android:text="@string/labelLightsOn" />

            <Button
                android:id="@+id/command_button_lights_off"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_bulb_white"
                android:text="@string/labelLightsOff" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_ato_clear"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_basket"
                android:text="@string/buttonAtoClear" />

            <Button
                android:id="@+id/command_button_overheat_clear"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_temperature"
                android:text="@string/buttonOverheatClear" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_calibrate_ph"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labelCalibratePH" />

            <Button
                android:id="@+id/command_button_calibrate_salinity"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labelCalibrateSalinity" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_calibrate_orp"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labelCalibrateORP" />

            <Button
                android:id="@+id/command_button_calibrate_water"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labelCalibrateWaterLevel" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/command_button_calibrate_phe"
                style="@style/CommandButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/labelCalibratePHExp" />
        </TableRow>
    </TableLayout>

</ScrollView>