<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2011-12 by Curt Binder (http://curtbinder.info)
 
This work is made available under the terms of the 
Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
http://creativecommons.org/licenses/by-nc-sa/3.0/
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <TextView
        style="@style/ParamsText"
        android:id="@+id/relayTitle"
        android:text="@string/labelRelayBox" />

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort1Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort1" />

        <ToggleButton
            android:id="@+id/relayPort1"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort1Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort2Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort2" />

        <ToggleButton
            android:id="@+id/relayPort2"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort2Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort3Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort3" />

        <ToggleButton
            android:id="@+id/relayPort3"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort3Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort4Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort4" />

        <ToggleButton
            android:id="@+id/relayPort4"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort4Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort5Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort5" />

        <ToggleButton
            android:id="@+id/relayPort5"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort5Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort6Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort6" />

        <ToggleButton
            android:id="@+id/relayPort6"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort6Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort7Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort7" />

        <ToggleButton
            android:id="@+id/relayPort7"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort7Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

    <TableRow style="@style/RARow" >

        <TextView
            android:id="@+id/relayPort8Label"
            style="@style/ParamsText.Labels"
            android:text="@string/labelPort8" />

        <ToggleButton
            android:id="@+id/relayPort8"
            style="@style/ParamsButton.Toggle" />

        <Button
            android:id="@+id/relayPort8Mask"
            style="@style/ParamsButton.Mask"
            android:background="@drawable/greenbutton" />
    </TableRow>

</TableLayout>